--- a/.config/sxhkd/sxhkdrc.save.1
+++ b/.config/sxhkd/sxhkdrc.save.1
@@ -19,12 +19,11 @@ super + shift + x
 	oblogout
 
 #launch firefox
-super + q
-	firefox
+super + q7;9u	firefox
 
 #launch thunar
 super + w
-	pcmanfm
+	thunar
 
 #launch vs-code
 super + e
@@ -73,9 +72,6 @@ super + space
 # set the node flags
 #super + ctrl + {m,x,y,z}
 #	bspc node -g {marked,locked,sticky,private}
-
-
-
 
 #
 # focus/swap
